# music_interactor

./: .gitignore  pyproject.toml  settings.local.toml  settings.toml
assets/scripts/: metadata_gen.py
src/interactor/audio/: __init__.py  clock.py  input.py  processing.py  protocols.py
src/interactor/core/: config.py
src/interactor/lyrics/: engine.py  models.py  provider_local.py
src/interactor/media/: lyrics.py  models.py  service.py
src/interactor/playback/: base.py  service.py
src/interactor/scripts/: terminal_visualizer.py
src/interactor/ui/: app.py  main_window.py
src/interactor/ui/models/: album_list_model.py  track_table_model.py
src/interactor/ui/pages/: album_page.py  home_page.py
src/interactor/ui/widgets/: hero_widget.py  library_widget.py  player_panel.py  track_table.py
