[project]
name = "music-interactor"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "backports-tarfile==1.2.0",
    "importlib-metadata==8.0.0",
    "jaraco-collections==5.1.0",
    "mutagen>=1.47.0",
    "numpy==2.3.4",
    "packaging==24.2",
    "pip-chill==1.0.3",
    "platformdirs==4.2.2",
    "pydantic>=2.11.9",
    "pydantic-settings==2.10.1",
    "python-ulid[pydantic]>=3.1.0",
    "sounddevice==0.5.3",
    "tomli==2.0.1",
]

[dependency-groups]
dev = []
